Standardize icon naming + add i18n update files

--- a/Scribe/i18n/Scribe-i18n/de.json
+++ b/Scribe/i18n/Scribe-i18n/de.json
@@ -1,4 +1,5 @@
 {
+  "_global.english": "Englisch",
   "_global.french": "Französisch",
   "_global.german": "Deutsch",
   "_global.italian": "Italienisch",
@@ -34,12 +35,12 @@
   "app.about.wikimedia.text2": "Wikidata ist ein kollaborativ gestalteter, mehrsprachiger Wissensgraf, der von der Wikimedia Foundation gehostet wird. Sie stellt frei verfügbare Daten, die unter einer Creative Commons Public Domain Lizenz (CC0) stehen, zur Verfügung. Scribe benutzt Sprachdaten von Wikidata, um Nutzern Verbkonjugationen, Kasusannotationen, Plurale und viele andere Funktionen zu bieten.",
   "app.about.wikimedia.text3": "Wikipedia ist eine mehrsprachige, freie, Online-Enzyklopädie, die von einer Community an Freiwilligen durch offene Kollaboration und einem Wiki-basierten Bearbeitungssystem geschrieben und aufrechterhalten wird. Scribe nutzt Wikipedia-Daten, um automatische Empfehlungen zu erstellen, indem die häufigsten Wörter und Folgewörter einer Sprache erlangt werden.",
   "app.install": "Installation",
+  "app.installation.appHint": "Folge den Anweisungen unten, um Scribe-Tastaturen auf deinem Gerät zu installieren.",
   "app.installation.settingsLink": "Scribe-Einstellungen öffnen",
   "app.installation.text1": "Drücke auf",
   "app.installation.text2": "Wähle die Tastaturen aus, die du benutzen möchtest\n\n4. Drücke beim Tippen auf",
   "app.installation.text3": "um Tastaturen auszuwählen",
   "app.installation.title": "Tastaturinstallation",
-  "app.installation.appHint": "Folge den Anweisungen unten, um Scribe-Tastaturen auf deinem Gerät zu installieren.",
   "app.keyboards": "Tastaturen",
   "app.settings.appHint": "Hier sind die Einstellungen der App und installierte Tastaturen zu finden.",
   "app.settings.appSettings": "App-Einstellungen",
@@ -54,6 +55,9 @@
   "app.settings.layout.periodAndComma": "Punkt und Komma auf ABC",
   "app.settings.layout.periodAndComma.description": "Füge der Haupttastatur Punkt- und Komma-Tasten für bequemeres Schreiben hinzu.",
   "app.settings.title": "Einstellungen",
+  "app.settings.translation": "Übersetzung",
+  "app.settings.translation.translateLang": "Übersetzungssprache",
+  "app.settings.translation.translateLang.caption": "Wähle die Sprache, von der übersetzt wird",
   "app.wikidataExplanation1": "Wikidata ist ein kollaborativ gestalteter, mehrsprachiger Wissensgraf, der von der Wikimedia Foundation gehostet wird. Sie dient als Quelle für offene Daten für unzählige Projekte, beispielsweise Wikipedia.",
   "app.wikidataExplanation2": "Scribe nutzt Sprachdaten von Wikidata für viele Kernfunktionen. Von dort erhalten wir Informationen wie Genera, Verbkonjugationen und viele mehr!",
   "app.wikidataExplanation3": "Du kannst auf wikidata.org einen Account erstellen, um der Community, die Scribe und viele andere Projekte unterstützt, beizutreten. Hilf uns dabei, der Welt freie Informationen zu geben!"
