Minor fix to name of app background icon

--- a/Scribe/i18n/Scribe-i18n/Localizable.xcstrings
+++ b/Scribe/i18n/Scribe-i18n/Localizable.xcstrings
@@ -494,35 +494,6 @@
         }
       }
     },
-    "app.about.mastodon" : {
-      "comment" : "",
-      "localizations" : {
-        "de" : {
-          "stringUnit" : {
-            "state" : "",
-            "value" : "Folge uns auf Mastodon"
-          }
-        },
-        "en" : {
-          "stringUnit" : {
-            "state" : "",
-            "value" : "Follow us on Mastodon"
-          }
-        },
-        "es" : {
-          "stringUnit" : {
-            "state" : "",
-            "value" : "Siguenos en Mastodon"
-          }
-        },
-        "sv" : {
-          "stringUnit" : {
-            "state" : "",
-            "value" : "Följ oss på Mastodon"
-          }
-        }
-      }
-    },
     "app.about.matrix" : {
       "comment" : "",
       "localizations" : {
@@ -658,12 +629,6 @@
           "stringUnit" : {
             "state" : "",
             "value" : "Rate Scribe"
-          }
-        },
-        "es" : {
-          "stringUnit" : {
-            "state" : "",
-            "value" : "Puntúa a Scribe"
           }
         },
         "sv" : {
@@ -1082,6 +1047,7 @@
     },
     "app.install" : {
       "comment" : "",
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -1290,12 +1256,6 @@
           "stringUnit" : {
             "state" : "",
             "value" : "Tastaturen"
-          }
-        },
-        "en" : {
-          "stringUnit" : {
-            "state" : "",
-            "value" : "Keyboards"
           }
         },
         "en" : {
@@ -1668,6 +1628,7 @@
     },
     "app.settings.oneDeviceLanguage.message" : {
       "comment" : "",
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -1697,64 +1658,7 @@
     },
     "app.settings.oneDeviceLanguage.title" : {
       "comment" : "",
-      "localizations" : {
-        "de" : {
-          "stringUnit" : {
-            "state" : "",
-            "value" : "Nur eine Gerätesprache"
-          }
-        },
-        "en" : {
-          "stringUnit" : {
-            "state" : "",
-            "value" : "Only one device language"
-          }
-        },
-        "es" : {
-          "stringUnit" : {
-            "state" : "",
-            "value" : "Solo un idioma para el dispositivo"
-          }
-        },
-        "sv" : {
-          "stringUnit" : {
-            "state" : "",
-            "value" : "Endast ett enhetsspråk"
-          }
-        }
-      }
-    },
-    "app.settings.oneDeviceLanguage.message" : {
-      "comment" : "",
-      "localizations" : {
-        "de" : {
-          "stringUnit" : {
-            "state" : "",
-            "value" : "Auf Ihrem Gerät ist nur eine Sprache installiert. Bitte installieren Sie weitere Sprachen in den Einstellungen. Anschließend können Sie verschiedene Lokalisierungen von Scribe auswählen."
-          }
-        },
-        "en" : {
-          "stringUnit" : {
-            "state" : "",
-            "value" : "You only have one language installed on your device. Please install more languages in Settings and then you can select different localizations of Scribe."
-          }
-        },
-        "es" : {
-          "stringUnit" : {
-            "state" : "",
-            "value" : "Solo tienes un idioma instalado en tu dispositivo. Instala más idiomas en Configuración y luego podrás seleccionar diferentes localizaciones de Scribe."
-          }
-        },
-        "sv" : {
-          "stringUnit" : {
-            "state" : "",
-            "value" : "Du har bara ett språk installerat på din enhet. Installera fler språk i Inställningar och efter det kan du välja olika lokaliseringar av Scribe."
-          }
-        }
-      }
-    },
-    "app.settings.oneDeviceLanguage.title" : {
-      "comment" : "",
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -1813,6 +1717,7 @@
     },
     "app.settings.translation" : {
       "comment" : "",
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -1842,6 +1747,7 @@
     },
     "app.settings.translation.translateLang" : {
       "comment" : "",
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -1871,6 +1777,7 @@
     },
     "app.settings.translation.translateLang.caption" : {
       "comment" : "",
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -1982,7 +1889,8 @@
             "state" : "",
             "value" : "Du kan skapa ett konto på wikidata.org för att gå med i communityn som stöder Scribe och så många andra projekt. Hjälp oss att ge gratis information till världen!"
           }
-        }      }
+        }
+      }
     }
   },
   "version" : "1.0"
