--- a/Scribe/i18n/Scribe-i18n/Localizable.xcstrings
+++ b/Scribe/i18n/Scribe-i18n/Localizable.xcstrings
@@ -900,6 +900,17 @@
         }
       }
     },
+    "app.about.version" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Check version"
+          }
+        }
+      }
+    },
     "app.about.wikimedia" : {
       "comment" : "",
       "localizations" : {
