Task: Added Scribe Command Variables For Norwegian

--- a/Scribe/i18n/Scribe-i18n/jsons/en-US.json
+++ b/Scribe/i18n/Scribe-i18n/jsons/en-US.json
@@ -7,6 +7,7 @@
   "app._global.russian": "Russian",
   "app._global.spanish": "Spanish",
   "app._global.swedish": "Swedish",
+  "app._global.norwegian": "Norwegian",
   "app.about.app_hint": "Here's where you can learn more about Scribe and its community.",
   "app.about.community.github": "See the code on GitHub",
   "app.about.community.mastodon": "Follow us on Mastodon",
