New Indonesian Keyboard (#546)
* init add Indonesian keyboard #322

* fix linking target indonesian

* fix linking target indonesian #322

* hide Conjugation and Plural buttons for indonesian keyboard #322

* Minor edit to project settings and add SQLite DB

* Updated IDLanguageData.sqlite

* prevent keyboard from crashing when querying non existent column (Indonesian) #322

* Add padding to id keys + misc fixes + reset xcstrings

* Remove change to Scribe-i18n

---------

Co-authored-by: Andrew Tavis McAllister <andrew.t.mcallister@gmail.com>

--- a/Scribe/i18n/Scribe-i18n/Localizable.xcstrings
+++ b/Scribe/i18n/Scribe-i18n/Localizable.xcstrings
@@ -2918,7 +2918,7 @@
         "bn" : {
           "stringUnit" : {
             "state" : "",
-            "value" : "Scribe ডেভেলপাররা (SCRIBE) iOS অ্যাপ্লিকেশন \"Scribe - Language Keyboards\" (SERVICE) তৃতীয় পক্ষের কোড ব্যবহার করে তৈরি করেছেন। এই SERVICE তৈরিতে ব্যবহৃত সমস্ত সোর্স কোড এমন উৎস থেকে এসেছে যা SERVICE দ্বারা সম্পূর্ণভাবে ব্যবহারের অনুমতি দেয়। এই অংশে SERVICE ভিত্তি করে যে সোর্স কোড ব্যবহার করা হয়েছে এবং প্রতিটি কোডের লাইসেন্স তালিকাভুক্ত করা হয়েছে।\n\nনিম্নলিখিত হল সমস্ত ব্যবহৃত সোর্স কোড, কোডের প্রধান লেখক বা লেখকদের নাম, ব্যবহারকালে কোডটির প্রকাশিত লাইসেন্স এবং লাইসেন্সের লিঙ্ক।"
+            "value" : "Scribe ডেভেলপাররা (SCRIBE) iOS অ্যাপ্লিকেশন \"Scribe - Language Keyboards\" (SERVICE) তৃতীয় পক্ষের কোড ব্যবহার করে তৈরি করেছেন। এই SERVICE তৈরিতে ব্যবহৃত সমস্ত সোর্স কোড এমন উৎস থেকে এসেছে যা SERVICE দ্বারা সম্পূর্ণভাবে ব্যবহারের অনুমতি দেয়। এই অংশে SERVICE ভিত্তি করে যে সোর্স কোড ব্যবহার করা হয়েছে এবং প্রতিটি কোডের লাইসেন্স তালিকাভুক্ত করা হয়েছে।\n\nনিম্নলিখিত হল সমস্ত ব্যবহৃত সোর্স কোড, কোডের প্রধান লেখক বা লেখকদের নাম, ব্যবহারকালে কোডটির প্রকাশিত লাইসেন্স এবং লাইসেন্সের লিঙ্ক।"
           }
         },
         "de" : {
@@ -3333,7 +3333,7 @@
         "bn" : {
           "stringUnit" : {
             "state" : "",
-            "value" : "সাম্প্রতিক সময়ের conjugated"
+            "value" : "সাম্প্রতিক সময়ের conjugated"
           }
         },
         "de" : {
