Fix UI unresponsiveness when switching translation language (#554)
- Fixed UI freezing issue when switching translation languages
- Improved responsiveness during language selection process
- Ensures smooth user experience when changing translation settings

Fixes #554

--- a/Scribe/i18n/Scribe-i18n/Localizable.xcstrings
+++ b/Scribe/i18n/Scribe-i18n/Localizable.xcstrings
@@ -1,6 +1,17 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
+    "app._global.danish" : {
+      "extractionState" : "extracted_with_value",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "Danish"
+          }
+        }
+      }
+    },
     "app._global.english" : {
       "comment" : "",
       "localizations" : {
